# optimized-explorer

./: .gitignore  CMakeLists.txt  DOCUMENTARY.txt  README.md  ROADMAP.txt
scary/: about  cmd.bat
src/: fs.h  fs_cd.cpp  fs_display.cpp  fs_manage.cpp  fs_search.cpp  main.cpp  shared.cpp
